grafana/60-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: grafana
spec:
  selector:
    app: grafana
  ports:
    - name: http-grafana
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
